syntax = "proto3";

message ChatMessage {
    string from = 1;
    string msg = 2;
    string time = 3;
}

message User {
    string id = 1;
    string name = 2;
}

message Empty {}

message UserList {
    repeated User users = 1;
}

message JoinResponse {
    int32 error = 1;
    string msg = 2;
}

message ChatMessageList {
    repeated ChatMessage messages = 1;
}

service ChatService {
    rpc join(User) returns (JoinResponse) {}
    rpc sendMessage(ChatMessage) returns (Empty) {}
    rpc getMessages(Empty) returns (ChatMessageList) {}
    rpc getUsers(Empty) returns (UserList) {}
}
